# ocean

./: .cursorrules  .dockerignore  .env.example  .gitignore  AUDIENCE.md  CHANGELOG.md  CLEANUP-SUMMARY.md  DECISIONS.md  Dockerfile  FEEDBACK.md  POSITIONING.md  PRODUCT_PRINCIPLES.md  ROADMAP.md  TASKS.md  UX_RULES.md  VISION.md  cli.py  cursor.json  docker-compose.yml  game.py  install-global.sh  main.py  ocean-cli  ocean_entrypoint.py  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  setup.sh  tsconfig.json  vite.config.ts
backend/: app.py
devops/: deploy.yaml  regression.md  render.yaml
docs/: api_design.md  architecture.md  backlog.json  bench_repos.yaml  cli_design.md  context_bundle.md  context_summary.md  cursor_rules.md  deploy.md  economy.json  first_sprint.md  mcp_cursor.md  ocean_autonomous_product_intelligence_loop.md  ocean_prefs.json  personas.yaml  plan.md  prd.md  project.json  roadmap.md  search_context.md  test_report.md  textual_tmux_pilot_scenarios.md  toad_first_run.md
logs/: events-20250905-102830.jsonl  events-20250905-120433.jsonl  events-20250905-130424.jsonl  events-20250905-195727.jsonl  events-20250905-195814.jsonl  events-20250905-195902.jsonl  events-20250905-205755.jsonl  events-20250905-211219.jsonl  events-20250905-211502.jsonl  events-20260511-121548.jsonl  events-20260511-121620.jsonl  events-20260511-121624.jsonl  events-20260511-121928.jsonl  events-20260511-121956.jsonl  events-20260511-122028.jsonl  events-20260511-122030.jsonl  events-20260511-122034.jsonl  events-20260511-122120.jsonl  events-20260511-122121.jsonl  events-20260511-122125.jsonl  events-20260511-122138.jsonl  events-20260511-122144.jsonl  events-20260511-122217.jsonl  events-20260511-122333.jsonl  events-20260511-122334.jsonl  events-20260511-124120.jsonl  events-20260511-124121.jsonl  events-20260511-124338.jsonl  (+29 more)
ocean-tui/: Cargo.toml
ocean-tui/src/: main.rs
(+203 files in other folders)
