[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ocean"
version = "0.1.0"
description = "OCEAN CLI/TUI multi-agent orchestrator"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OCEAN Team" }]
dependencies = [
  "typer[all]>=0.9.0",
  "rich>=13.7.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[project.scripts]
ocean = "ocean.cli:entrypoint"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["ocean*"]
exclude = ["backend*", "ui*", "devops*"]
