[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ocean"
version = "0.2.27"
description = "OCEAN CLI/TUI multi-agent orchestrator"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OCEAN Team" }]
dependencies = [
  "typer[all]>=0.9.0",
  "rich>=15.0.0",
  "prompt_toolkit>=3.0.47",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pytest>=8.2.0",
  "httpx>=0.28.0",
  "batrachian-toad>=0.6.16; python_version>='3.14'",
]

[project.scripts]
ocean = "ocean.cli:entrypoint"
ocean-mcp = "ocean.mcp_server:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["ocean*"]
exclude = ["backend*", "ui*", "devops*"]
