[package]
name = "ocean-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
unicode-width = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

